src/app/components/verse-section/verse-section.component.css
.section {
  color: var(--text-secondary);
  font-weight: bold;
}

.s1Section {
  text-align: center;
  font-size: 130%;
  margin: auto;
}

.verseText {
  font-size: 120%;
}

.center {
  margin: 0 auto;
  display: table;
  text-align: center;
}

* {
  user-select: text !important;
  -webkit-user-select: text !important;
  -ms-user-select: text !important;
}

.references {
  font-size: 80%;
  color: var(--text-color);
  margin-top: 5px;
  font-weight: normal;
}

a {
  color: var(--text-color);
}

.line-break {
  display: block;
}

